--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@ body{
 }
 
 .card{
-  width:min(860px, 92vw);
-  background: var(--card);
-  border-radius: var(--radius);
-  padding: 36px 28px 42px;
-  box-shadow: 0 20px 50px var(--shadow);
+ width: min(860px, 92vw);
+  background: #ffffff;
+
+  /* intentional blob — not random */
+  border-radius: 32% 68% 38% 62% / 48% 42% 58% 52%;
+
+  padding: 40px 32px 44px;
   position: relative;
+  overflow: hidden;
+
+
+  outline: 3px solid #E6B7D8;
+  outline-offset: -3.5px;
 }
+
 
 /* ===== OCTOPUS MASCOT ===== */
 
@@ -56,6 +64,11 @@ body{
 @keyframes float{
   0%,100%{ transform:translateY(0); }
   50%{ transform:translateY(-6px); }
+}
+
+@keyframes cardMorph{
+  0%,100%{ border-radius: 28% 72% 33% 67% / 55% 34% 66% 45%; }
+  50%{    border-radius: 35% 65% 40% 60% / 50% 45% 55% 50%; }
 }
 
 /* head */
@@ -170,6 +183,7 @@ button{
 #yesBtn{
   background: var(--yes);
   color: var(--yesText);
+  margin-right: 125px;
 
   /* base size (change this!) */
   --yesBase: 1.25;
@@ -301,7 +315,7 @@ button{
 
   <div class="celebrate" id="celebrate">
     <h2>Yesss 🎉</h2>
-    <p> My pretty baby ❤️ </p>
+    <p> You're my pretty baby ❤️ </p>
     <div class="imgBox">
         <img id="celebrateImg" alt="celebration meme"
          src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" />
